[tool.poetry]
name = "remote_target"
version = "0.1.0"
description = "A tool for automating software deployments and directory replication over sftp"
authors = ["dylan-robins <dylan.robins@gmail.com>"]

[tool.poetry.scripts]
remote_target = "remote_target.__main__:main"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
cryptography = "36.0.2"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
